# ChangeLog for sci-biology/clustalw
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.25 2012/04/22 15:49:00 xarthisius Exp $

*clustalw-2.1 (22 Apr 2012)

  22 Apr 2012; Kacper Kowalik <xarthisius@gentoo.org> +clustalw-2.1.ebuild:
  Version bump

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  clustalw-1.83-r3.ebuild:
  Transfer Prefix keywords

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  clustalw-2.0.12.ebuild:
  Transfer Prefix keywords

*clustalw-2.0.12 (18 Oct 2009)

  18 Oct 2009; Andrey Kislyuk <weaver@gentoo.org> +clustalw-2.0.12.ebuild:
  Version bump

  22 Sep 2009; Markus Meier <maekke@gentoo.org> clustalw-2.0.11.ebuild:
  x86 stable, bug #282109

  06 Sep 2009; Jeremy Olexa <darkside@gentoo.org> clustalw-2.0.11.ebuild:
  amd64 stable, bug 282109

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org> clustalw-1.83-r2.ebuild:
  Fix Manifest

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org> +clustalw-1.83-r2.ebuild:
  Avoid dropping stable keywords until stablereqs are done

*clustalw-1.83-r3 (18 Aug 2009)

  18 Aug 2009; Andrey Kislyuk <weaver@gentoo.org>
  +files/1.83-as-needed.patch, -clustalw-1.83-r2.ebuild,
  +clustalw-1.83-r3.ebuild:
  Fix bug 281734, thanks to Justin Lecher (jlec)

*clustalw-2.0.11 (28 Apr 2009)

  28 Apr 2009; Andrey Kislyuk <weaver@gentoo.org> -clustalw-2.0.9.ebuild,
  +clustalw-2.0.11.ebuild:
  Version bump, remove old, assume maintainership

  24 Mar 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

  09 Sep 2008; Markus Dittrich <markusle@gentoo.org> clustalw-2.0.9.ebuild:
  Keyworded amd64 since it works just fine.

*clustalw-2.0.9 (28 Aug 2008)

  28 Aug 2008; Olivier Fisette <ribosome@gentoo.org> +clustalw-2.0.9.ebuild:
  New upstream major version (complete rewrite, removing keywords). Slotted
  to cohexist with version 1.x.

*clustalw-1.83-r2 (27 Aug 2008)
