@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/clustalw-2.1.ebuild,v 1.1 2012/04/22 15:49:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/clustalw-2.1.ebuild,v 1.2 2012/06/04 08:43:43 ago Exp $
 
 EAPI=4
 
@@ -10,5 +10,5 @@ SRC_URI="http://www.clustal.org/download/current/${P}.tar.gz"
 
 LICENSE="GPL-3 LGPL-3"
 SLOT="2"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
+KEYWORDS="amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
 IUSE=""
