@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/clustalx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalx/ChangeLog,v 1.22 2012/04/22 15:53:08 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalx/ChangeLog,v 1.23 2012/06/04 08:43:25 ago Exp $
+
+  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> clustalx-2.1.ebuild:
+  Stable for amd64, wrt bug #416891
 
 *clustalx-2.1 (22 Apr 2012)
 
