@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/clustalw
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.25 2012/04/22 15:49:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/clustalw/ChangeLog,v 1.26 2012/06/04 08:43:43 ago Exp $
+
+  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> clustalw-2.1.ebuild:
+  Stable for amd64, wrt bug #416891
 
 *clustalw-2.1 (22 Apr 2012)
 
